k8s/auth-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
#
metadata:
  name: auth-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: uaa
  template:
    metadata:
      labels:
        component: uaa
    spec:
      containers:
        - name: auth-service
          image: noxior/auth-service
          ports:
            - containerPort: 3001
#          env:
#            - name: REDIS_HOST
#              value: redis-cluster-ip-service
#            - name: REDIS_PORT
#              value: '6379'
#            - name: PGUSER
#              value: postgres
#            - name: PGHOST
#              value: postgres-cluster-ip-service
#            - name: PGPORT
#              value: '5432'
#            - name: PGDATABASE
#              value: postgres
#            - name: POSTGRES_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: pgpassword
#                  key: POSTGRES_PASSWORD
