k8s/hexolink-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexolink-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hexolink
  template:
    metadata:
      labels:
        component: hexolink
    spec:
      containers:
        - name: hexolink
          image: noxior/hexolink
          ports:
            - containerPort: 6001
