k8s/messenger-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messenger-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: messenger
  template:
    metadata:
      labels:
        component: messenger
    spec:
      containers:
        - name: messenger
          image: noxior/messenger
          ports:
            - containerPort: 6001
