k8s/auth-service-cluster-ip-service.yml
apiVersion: v1
#
kind: Service
metadata:
  name: auth-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: uaa
  ports:
    - port: 3001
      targetPort: 3001
