k8s/hexolink-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hexolink-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: hexolink
  ports:
    - port: 6001
      targetPort: 6001
