k8s/messenger-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: messenger-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: messenger
  ports:
    - port: 6001
      targetPort: 6001
