k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - hexolink.lat
        - www.hexolink.lat
      secretName: hexolink-lat
  rules:
    - host: hexolink.lat
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service-cluster-ip-service
                port:
                  number: 3001
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: messenger-cluster-ip-service
                port:
                  number: 6001
    - host: www.hexolink.lat
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service-cluster-ip-service
                port:
                  number: 3001
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: messenger-cluster-ip-service
                port:
                  number: 6001
